# ros_testing_experiments

./: CMakeLists.txt  package.xml
test/: cpp_rostest.test  py_rostest.test  test.cpp  test.py
