<?xml version="1.0"?>
<package format="2">
  <name>ros_testing_experiments</name>
  <version>1.0.0</version>
  <description>The ros_testing_experiments package</description>

  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <test_depend>rostest</test_depend>
  <test_depend>gmock</test_depend>

  <export>
  </export>

</package>
